Fixed row that extended past the container width and aligned column headers with row columns

--- a/src/index.css
+++ b/src/index.css
@@ -58,6 +58,10 @@
   height: 5rem;
 }
 
+#tableSize {
+  max-width: inherit;
+}
+
 @media screen and (max-width: 768px) {
   .margin-sides {
     margin-left: 10%;
